Combine labels. Add early stopping. Refactor.

--- a/src/label_graph.ipynb
+++ b/src/label_graph.ipynb
@@ -31,8 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "df['label'] = df['datasource'].apply(lambda x: \"-\".join(os.path.basename(x).split('.')[0].split('_')[:2]))\n",
+    "from data_builder import get_label\n",
+    "df['label'] = df['datasource'].apply(lambda x: get_label(x, combined_labels=False))\n",
     "df['datasource'] = 'VPN/NONVPN NETWORK APPLICATION TRAFFIC DATASET (VNAT)'"
    ]
   },
